[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Assets/Images/Experimental/Red.png" type="Texture" id=1]
[ext_resource path="res://Game/Assets/Images/Experimental/Blue.png" type="Texture" id=2]
[ext_resource path="res://Game/Assets/Images/Experimental/Yellow.png" type="Texture" id=3]
[ext_resource path="res://Game/Scripts/Main/DeckMenus/DisplayCard.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 53.8454, 52.1263 )

[node name="DisplayCard" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.445465, 0 )
shape = SubResource( 1 )

[node name="BaseBackground" type="Sprite" parent="."]

[node name="CardBack" type="Sprite" parent="BaseBackground"]
position = Vector2( -0.358032, 0.0103607 )
texture = ExtResource( 3 )

[node name="ColorBackground" type="Sprite" parent="."]

[node name="Red" type="Sprite" parent="ColorBackground"]
position = Vector2( -0.499426, -0.00876412 )
scale = Vector2( 0.928728, 0.937637 )
texture = ExtResource( 1 )

[node name="PictureBackground" type="Sprite" parent="."]

[node name="Yellow" type="Sprite" parent="PictureBackground"]
position = Vector2( -0.72213, 13.8002 )
scale = Vector2( 0.737185, 0.554551 )
texture = ExtResource( 3 )

[node name="Picture" type="Sprite" parent="."]

[node name="Blue" type="Sprite" parent="Picture"]
position = Vector2( -0.944876, 13.5774 )
scale = Vector2( 0.65255, 0.487733 )
texture = ExtResource( 2 )

[node name="Name" type="Label" parent="."]
margin_left = -44.0
margin_top = -44.0
margin_right = 43.0
margin_bottom = -30.0
text = "sample"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_DisplayCard_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_DisplayCard_mouse_exited"]
